--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,17 @@
+name: CI
 
-- name: CI
+on:
+  workflow_dispatch:
 
- on:
-   workflow_dispatch:
-    
 jobs:
-     runs-on:ubuntu-latest
-     
-     name: newClone
-  uses: GuillaumeFalourd/clone-github-repo-action@v2.3
-  with:
-    depth: 1
-    branch: 'main'
-    owner: 'VISHWATEJA1978'
-    repository: 'Expense-Sharing'
-    
+  newClone:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clone Repo
+        uses: GuillaumeFalourd/clone-github-repo-action@v2.3
+        with:
+          depth: 1
+          branch: 'main'
+          owner: 'VISHWATEJA1978'
+          repository: 'Expense-Sharing'
