--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
           depth: 1
           branch: 'main'
           owner: 'VISHWATEJA1978'
-          repository: 'Expense-Sharing'
+          repository: 'Expense-Sharing-'
